--- a/app/views/mvp_v1_1/armed-forces-service-number.html
+++ b/app/views/mvp_v1_1/armed-forces-service-number.html
@@ -18,7 +18,7 @@
   <form method="post" class="measure">
 
     <div class="form-group">
-      <input type="text" id="service-no" name="service-no" value="{{ session.armedforces.serviceno }}">
+      <input type="tel" id="service-no" name="service-no" value="{{ session.armedforces.serviceno }}">
     </div>
 
     <div class="form-group -controls">
