Reduce header size in gp finder

--- a/app/assets/sass/modules/gp-lookup/_gp-lookup.scss
+++ b/app/assets/sass/modules/gp-lookup/_gp-lookup.scss
@@ -59,7 +59,8 @@
     }
   }
 
-  h2 {
+  .result-title {
+    font-size: $body;
     font-weight: 400;
     color: $blue;
     text-decoration: underline;
