Allow swapping between Frutiger and system fonts

--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -4,7 +4,7 @@
 
 @import "variables/colours";
 @import "variables/frutiger";
-//@import "variables/fs-me";
+//@import "variables/system";
 
 //Typography
 @import "modules/typography/base";
