Reword armed forces question

--- a/app/views/mvp_v1_2/armed-forces.html
+++ b/app/views/mvp_v1_2/armed-forces.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 
-  <h1 class="primary">Are you returning from the armed forces?</h1>
+  <h1 class="primary">Have you served in the armed forces?</h1>
 
   <form method="post" class="measure">
 
