Just ask for a phone number, don't distinguish between mobile and landline

--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -25,6 +25,7 @@
 @import "modules/forms/fieldset";
 @import "modules/forms/form";
 @import "modules/forms/input";
+@import "modules/forms/input-hinted";
 @import "modules/forms/label";
 @import "modules/forms/radio-checkbox";
 @import "modules/forms/textarea";
