--- a/app/views/mvp_v1_2/_email-gp-notification.html
+++ b/app/views/mvp_v1_2/_email-gp-notification.html
@@ -24,13 +24,8 @@
       <tr>
         <td class="submissionTitle" valign="top">Telephone</td>
         <td class="submissionContent" valign="top">
-          {% if session.contact.telephone != '' or session.contact.mobile != '' %}
-            {% if session.contact.telephone != '' %}
-              {{ session.contact.telephone }}<br>
-            {% endif %}
-            {% if session.contact.mobile != '' %}
-              {{ session.contact.mobile }}
-            {% endif %}
+          {% if session.contact.telephone != '' %}
+            {{ session.contact.telephone }}
           {% else %}
             I’m not providing a telephone number
           {% endif %}
