--- a/app/views/mvp_v1_1/_email-gp-notification.html
+++ b/app/views/mvp_v1_1/_email-gp-notification.html
@@ -1,4 +1,4 @@
-{% extends '_layouts/email-layout.html' %}
+{% extends '_layouts/gp-email-layout.html' %}
 
 {% block content %}
   {% if session.name %}
