--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,6 +4,14 @@
 
 {% block content %}
   <h1>Prototypes</h1>
+  <h2>User receipt email</h2>
+  <ul>
+    <li>
+      <p>
+        <a href="/emails/user-email">User email receipt, v1</a>
+      </p>
+    </li>
+  </ul>
   <h2>Proposition</h2>
   <ul>
     <li>
