--- a/app/views/user_email/_email-user-receipt.html
+++ b/app/views/user_email/_email-user-receipt.html
@@ -25,7 +25,7 @@
 
     <tr>
       <td class="contentCell" valign="top" style="padding-top:30px;">
-        If you need medical care sooner than xx days then
+        If you need medical care sooner then
         <ul>
           <li>call {{ practiceName }} on {{ practiceTelephone }}, or</li>
           <li>find <a href="#">other NHS services that can help you</a></li>
