Consistency between the email receipt and the confirmation page

--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -11,6 +11,7 @@
 @import "modules/typography/headings";
 @import "modules/typography/paragraphs";
 @import "modules/typography/lists";
+@import "modules/typography/formatting";
 @import "modules/typography/links";
 
 // Modules
