--- a/app/views/user_email/_email-user-receipt.html
+++ b/app/views/user_email/_email-user-receipt.html
@@ -27,7 +27,7 @@
       <td class="contentCell" valign="top" style="padding-top:30px;">
         If you need medical care sooner then
         <ul>
-          <li>call {{ practiceName }} on {{ practiceTelephone }}, or</li>
+          <li>call {{ practiceName }} on <span class="tel">{{ practiceTelephone }}</span>, or</li>
           <li>find <a href="#">other NHS services that can help you</a></li>
         </ul>
       </td>
@@ -36,7 +36,7 @@
     <tr>
       <td class="contentCell" valign="top" style="border-top:1px solid #cbd6d7; padding-top:30px;">
         <b>What if I don't hear from {{ practiceName }}?</b><br>
-        If you don’t hear anything within 2 days, call the practice on {{ practiceTelephone }}
+        If you don’t hear anything within 2 days, call the practice on <span class="tel">{{ practiceTelephone }}</span>
       </td>
     </tr>
 
