--- a/app/views/mvp_v1_2/registration-submitted.html
+++ b/app/views/mvp_v1_2/registration-submitted.html
@@ -11,13 +11,12 @@
 {% block content %}
   <div class="measure">
 
-    <div class="signage completion">
-      <div>
-        <h1 class="body">Your application is being processed. You will be contacted by {{ practiceName }} within 2 days.</h1>
-      </div>
-    </div>
+    <h1 class="heading-xlarge">Thank you for applying to register with {{ practiceName }}</h1>
 
-    <p>Your application to register has been sent to</p>
+    <p>
+      They are dealing with your registration application. They will contact you about it by {{ jsNow | date('add', 2, 'days') | date('Do MMMM YYYY') }}.
+    </p>
+
     <p>
       <b>{{ practiceName }}</b><br>
       {% for line in practiceAddress %}
@@ -25,20 +24,22 @@
           {{ line }}<br>
         {% endif %}
       {% endfor %}
-      {{ practicePostcode | upper }}
+      {{ practicePostcode | upper }}<br><br>
+      Phone: {{ practiceTelephone }}<br><br>
+      <a href="#">Opening times</a>
     </p>
 
-    <h2>What if I need help sooner?</h2>
-    <p>If you need medical care sooner you can</p>
-    <ul>
-      <li>call {{ practiceName }} on <span class="tel">{{ practiceTelephone }}</span>, or</li>
-      <li>find <a href="#">other NHS services that can help you</a></li>
-    </ul>
+    <div class="signage info-pop">
+      <div>
+        <p>
+          If you need to see a doctor sooner, contact the practice or <a href="#">find other NHS services that can help you.</a>
+        </p>
+      </div>
+    </div>
 
-
-    <h2>What if I don't hear anything?</h2>
-    <p>If you don’t hear anything within 2 days, call the {{ practiceName }} on <span class="tel">{{ practiceTelephone }}</span></p>
-    <p><a href="#">Your right to register with a GP practice</a></p>
+    <p>
+      <a href="#">Your right to register with a GP practice</a>
+    </p>
 
     <div>
       <a href="http://www.nhsbt.nhs.uk/" title="This link will open in a new window or tab" target="_blank">
