Post-crit with Matt, Trilly, Dan

--- a/app/views/_layouts/user-email-layout.html
+++ b/app/views/_layouts/user-email-layout.html
@@ -195,7 +195,7 @@
                   <a href="/"><img src="/images/nhs-logotype-blue.svg" alt="NHS" width="79"></a>
                 </td>
                 <td valign="top" class="headerContent" style="padding-top:15px; padding-right:10px; padding-bottom:10px; padding-left:0;">
-                  Register with a GP practice
+                  Register with {{ practiceName }}
                 </td>
               </tr>
             </table>
