--- a/app/views/mvp_v1_2/registration-submitted.html
+++ b/app/views/mvp_v1_2/registration-submitted.html
@@ -25,8 +25,7 @@
         {% endif %}
       {% endfor %}
       {{ practicePostcode | upper }}<br><br>
-      Phone: {{ practiceTelephone }}<br><br>
-      <a href="#">Opening times</a>
+      Phone: {{ practiceTelephone }}
     </p>
 
     <div class="signage info-pop">
@@ -38,7 +37,7 @@
     </div>
 
     <p>
-      <a href="#">Your right to register with a GP practice</a>
+      <a href="#">Read about your right to register with a GP practice</a>
     </p>
 
     <div>
