--- a/app/views/user_email/_email-user-receipt.html
+++ b/app/views/user_email/_email-user-receipt.html
@@ -18,10 +18,7 @@
           {% endif %}
         {% endfor %}
         {{ practicePostcode | upper }}<br><br>
-        Phone: {{ practiceTelephone }}<br><br>
-        <a href="#">
-          <span style="color:#0072c6; text-decoration:underline;">Opening times</span>
-        </a>
+        Phone: {{ practiceTelephone }}
       </td>
     </tr>
 
@@ -34,7 +31,7 @@
     <tr>
       <td class="contentCell" valign="top" style="padding-top:30px;">
         <a href="#">
-          <span style="color:#0072c6; text-decoration:underline;">Your right to register with a GP practice</span>
+          <span style="color:#0072c6; text-decoration:underline;">Read about your right to register with a GP practice</span>
         </a>
       </td>
     </tr>
