Initial setup of /vision_v1

--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -35,6 +35,8 @@
 @import "modules/header-local/header-panel-local";
 @import "modules/signage/info";
 
+@import "modules/nhsid/nhsid";
+
 // Layout and grid
 @import "modules/layout/layout";
 @import "modules/layout/grid";
