--- a/app/assets/sass/modules/forms/_input.scss
+++ b/app/assets/sass/modules/forms/_input.scss
@@ -1,7 +1,8 @@
 input[type='text'],
 input[type='number'],
 input[type='tel'],
-input[type='email'] {
+input[type='email'],
+input[type='password'] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
