--- a/app/assets/sass/modules/typography/_headings.scss
+++ b/app/assets/sass/modules/typography/_headings.scss
@@ -23,3 +23,10 @@ h5 a,
 h6 a {
   text-decoration: none;
 }
+
+.heading-prefix {
+  display: block;
+  font-size: 20px;
+  line-height: 1;
+  color: tint($black, 50);
+}
