--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,6 +12,15 @@
       </p>
     </li>
   </ul>
+  <h2>Vision</h2>
+  <ul>
+    <li>
+      <p>
+        <a href="/vision-v1/start">Vision, v1</a><br>
+        See <a href="https://github.com/nhsuk/register-with-a-gp-design/blob/master/Register%20interaction%20flow/register-flow-v2.1.1.pdf">register-flow-v2.1.1</a>
+      </p>
+    </li>
+  </ul>
   <h2>Proposition</h2>
   <ul>
     <li>
