--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,10 +1,10 @@
 @import url("//fast.fonts.net/cssapi/4c65968f-c33e-4eb6-9a5d-ab4f81a0543f.css");
-.prototype-warning-inner, .breadcrumb, .footer-container, .-date, .error-summary, form, .form-group, #global-header, .signage, .header-container,
+.prototype-warning-inner, .breadcrumb, .footer-container, .-date, .error-summary, form, .form-group, #global-header, .signage, .nhsid-container, .header-container,
 .content, .grid-row {
   zoom: 1;
 }
 
-.prototype-warning-inner:after, .breadcrumb:after, .footer-container:after, .-date:after, .error-summary:after, form:after, .form-group:after, #global-header:after, .signage:after, .header-container:after,
+.prototype-warning-inner:after, .breadcrumb:after, .footer-container:after, .-date:after, .error-summary:after, form:after, .form-group:after, #global-header:after, .signage:after, .nhsid-container:after, .header-container:after,
 .content:after, .grid-row:after {
   content: "";
   display: block;
@@ -92,6 +92,13 @@ h4 a, .heading-body a,
 h5 a,
 h6 a {
   text-decoration: none;
+}
+
+.heading-prefix {
+  display: block;
+  font-size: 20px;
+  line-height: 1;
+  color: #918f90;
 }
 
 p {
@@ -394,6 +401,7 @@ details {
 details summary {
   text-decoration: underline;
   display: inline-block;
+  cursor: pointer;
 }
 
 details summary:focus {
@@ -515,7 +523,8 @@ form {
 input[type='text'],
 input[type='number'],
 input[type='tel'],
-input[type='email'] {
+input[type='email'],
+input[type='password'] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -538,7 +547,8 @@ input[type='email'] {
   input[type='text'],
   input[type='number'],
   input[type='tel'],
-  input[type='email'] {
+  input[type='email'],
+  input[type='password'] {
     width: 75%;
   }
 }
@@ -546,7 +556,8 @@ input[type='email'] {
 input[type='text']:focus,
 input[type='number']:focus,
 input[type='tel']:focus,
-input[type='email']:focus {
+input[type='email']:focus,
+input[type='password']:focus {
   outline: 0;
   -webkit-box-shadow: 0 0 0 5px #F7E214;
   -moz-box-shadow: 0 0 0 5px #F7E214;
@@ -557,7 +568,8 @@ input[type='email']:focus {
   input[type='text'].-small,
   input[type='number'].-small,
   input[type='tel'].-small,
-  input[type='email'].-small {
+  input[type='email'].-small,
+  input[type='password'].-small {
     width: 8em;
   }
 }
@@ -1015,6 +1027,23 @@ textarea:focus {
   color: #0072c6;
   font-weight: 700;
   border: 4px solid currentcolor;
+}
+
+.subtle-push {
+  border: 2px solid #80b9e3;
+}
+
+.nhsid-container {
+  margin: 32px auto;
+  padding: 16px;
+  background-color: #f2f8fc;
+  border-top: 4px solid #0072c6;
+}
+
+@media (min-width: 500px) {
+  .nhsid-container {
+    padding: 32px;
+  }
 }
 
 body, pre.user-input {
