--- a/app/views/_layouts/nhsid-layout.html
+++ b/app/views/_layouts/nhsid-layout.html
@@ -18,7 +18,9 @@
 
     <main id="content" role="main" class="content">
       <div class="nhsid-container">
-        {% block content %}{% endblock %}
+        <div>
+          {% block content %}{% endblock %}
+        </div>
       </div>
     </main>
 
