--- a/app/views/vision_v1/nhsid-sign-in.html
+++ b/app/views/vision_v1/nhsid-sign-in.html
@@ -30,6 +30,12 @@
       <a href="{{ back }}" class="button -back">Back</a>
     </div>
 
+    <div class="nhsid-secondary-controls">
+      <a href="#">Forgotten user name</a><br>
+      <a href="#">Forgotten password</a><br>
+      <a href="#">Forgotten user name and password</a>
+    </div>
+
   </form>
 {% endblock %}
 
