Sketch in GP details page

--- a/app/views/vision_v1/start.html
+++ b/app/views/vision_v1/start.html
@@ -14,7 +14,7 @@
     <div class="grid-3-3">
       <ol class="breadcrumb">
         <li><a href="#" class="button -bordered -small">GP practices</a></li>
-        <li><a href="#" class="button -bordered -small">{{ practiceName }}</a></li>
+        <li><a href="gp-details" class="button -bordered -small">{{ practiceName }}</a></li>
         <li class="selected">Register</li>
       </ol>
     </div>
