--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -30,6 +30,7 @@
 @import "modules/forms/label";
 @import "modules/forms/radio-checkbox";
 @import "modules/forms/textarea";
+@import "modules/gp-details/gp-details";
 @import "modules/gp-lookup/gp-lookup";
 @import "modules/header-global/header-global";
 @import "modules/header-local/header-panel-local";
