Tweak NHS.ID language a bit

--- a/app/views/vision_v1/start.html
+++ b/app/views/vision_v1/start.html
@@ -28,7 +28,7 @@
 
         <h2>Do you have an NHS.ID?</h2>
 
-        <p><a href="nhsid">Sign in to register with {{ practiceName }}</a></p>
+        <p><a href="nhsid">Use NHS.ID to register with {{ practiceName }}</a></p>
 
         <details>
           <summary>What is NHS.ID?</summary>
