Maps key to env var

--- a/app/views/vision_v1/gp-details.html
+++ b/app/views/vision_v1/gp-details.html
@@ -97,7 +97,7 @@
       map.data.setStyle(catchmentStyle.off);
     };
   </script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALfTTSXv5SNz_5LVjRbyVskyAZep7rbNE&callback=initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key={{ mapsKey }}&callback=initMap"></script>
 
   <p>
     <a href="#" id="catchment-toggle" class="js-catchment-hidden">Show practice catchment area on map</a>
