Add 'print page' link

--- a/app/views/vision_v1/registration-submitted.html
+++ b/app/views/vision_v1/registration-submitted.html
@@ -37,6 +37,10 @@
     </div>
 
     <p>
+      <a href="#">Print this page</a>
+    </p>
+
+    <p>
       <a href="#">Read about your right to register with a GP practice</a>
     </p>
 
