--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,6 +25,13 @@
   <ul>
     <li>
       <p>
+        <a href="/mvp-v1.3/gp-details">MVP, v1.3</a><br>
+        See <a href="https://github.com/nhsuk/register-with-a-gp-design/blob/master/Register%20interaction%20flow/register-flow-v2.1.1.pdf">register-flow-v2.1.1</a><br>
+        (GP details page included for lab on 5th January 2017)
+      </p>
+    </li>
+    <li>
+      <p>
         <a href="/mvp-v1.2/choices">MVP, v1.2</a><br>
         See <a href="https://github.com/nhsuk/register-with-a-gp-design/blob/master/Register%20interaction%20flow/register-flow-v2.1.1.pdf">register-flow-v2.1.1</a>
       </p>
