--- a/app/views/mvp_v1_3/contact-telephone.html
+++ b/app/views/mvp_v1_3/contact-telephone.html
@@ -19,7 +19,7 @@
     </h1>
 
     <div class="form-group -hanging-hint">
-      <input type="tel" id="telephone" name="telephone" value="{{ session.contact.telephone }}" style="float: left;">
+      <input autocomplete="off" type="tel" id="telephone" name="telephone" value="{{ session.contact.telephone }}" style="float: left;">
       <span class="form-hint">(optional)</span>
     </div>
 
