--- a/app/views/mvp_v1_3/armed-forces-enlistment-date.html
+++ b/app/views/mvp_v1_3/armed-forces-enlistment-date.html
@@ -21,15 +21,15 @@
       <div class="form-group -date">
         <div>
           <label for="enlistment-day">Day</label>
-          <input type="number" id="enlistment-day" name="enlistment-day" value="{{ session.armedforces.enlistment.day }}" class="day" maxlength="2">
+          <input autocomplete="off" type="number" id="enlistment-day" name="enlistment-day" value="{{ session.armedforces.enlistment.day }}" class="day" maxlength="2">
         </div>
         <div>
           <label for="enlistment-month">Month</label>
-          <input type="number" id="enlistment-month" name="enlistment-month" value="{{ session.armedforces.enlistment.month }}" class="month" maxlength="2">
+          <input autocomplete="off" type="number" id="enlistment-month" name="enlistment-month" value="{{ session.armedforces.enlistment.month }}" class="month" maxlength="2">
         </div>
         <div>
           <label for="enlistment-year">Year</label>
-          <input type="number" id="enlistment-year" name="enlistment-year" value="{{ session.armedforces.enlistment.year }}" class="year" maxlength="4">
+          <input autocomplete="off" type="number" id="enlistment-year" name="enlistment-year" value="{{ session.armedforces.enlistment.year }}" class="year" maxlength="4">
         </div>
       </div>
     </fieldset>
