Hide spinner in number inputs

--- a/app/assets/sass/modules/forms/_input.scss
+++ b/app/assets/sass/modules/forms/_input.scss
@@ -37,3 +37,8 @@ input[type='password'] {
     }
   }
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
