--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -574,6 +574,11 @@ input[type='password']:focus {
   }
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 .-hanging-hint input {
   float: left;
 }
